--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ header {
   font-family: 'Yellowtail', Helvetica, sans-serif;
 
   position: absolute;
-  bottom: 20px;
+  bottom: 17px;
   left: 50px;
 }
 
@@ -46,6 +46,8 @@ header {
 
   text-transform: uppercase;
   position: absolute;
+  bottom: 20px;
+  left: 50px;
 }
 
 .social_icons {
